--- a/src/pages/ItemList/ItemList.css
+++ b/src/pages/ItemList/ItemList.css
@@ -10,8 +10,8 @@
 }
 
 .list-container {
-  /* justify-content: center; */
-  /* align-items: center !important; */
+  justify-content: center;
+  align-items: center !important;
   /* background-color: blue; */
   margin-top: 3rem !important;
 }
